# brain

./: .env.example  .env.sample  .gitignore  AGENTS.md  Dockerfile  Dockerfile.core  Makefile  QUICKSTART.md  README.md  alembic.ini  bounce.sh  com.user.brain.plist  docker-compose.observability.yml  docker-compose.yaml  docker-compose.yml  follow.sh  local_prompt.sh  nuke-and-pave.sh  package-lock.json  pyproject.toml  requirements.in  requirements.txt  ruff.toml  sync-docs.sh  test.sh  utcp.json.sample
.github/workflows/: tests.yaml  tests.yml
actors/cli/: README.md  main.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_indexer_state.py  0002_timezone_columns.py  0007_attention_preferences.py  0007b_alembic_version_len.py  0009_attention_escalation_logs.py  0010_attention_batches.py  0011_attention_batch_summaries.py  0013_attention_fail_closed_queue.py  0014_attention_decision_records.py  0015_attention_fail_closed_envelopes.py  0016_scheduler_schema_migrations.py  0017_scheduler_audit_schema.py  0018_predicate_evaluation_audit_schema.py  0021_ingestions_table.py  0025_normalization_metadata_table.py  0027_ingestion_index_updates_and_embedding_dispatches.py  0028_ingestion_stage_runs_table.py  0029_commitments_table.py  0030_commitment_state_transitions.py  0033_commitment_progress_nullable_provenance.py  0034_commitment_artifacts_table.py  bdd7c89f9c03_add_review_output_schema.py
capabilities/demo-echo/: README.md  capability.json
config/: actors.yaml.sample  brain.yaml.sample  brain.yml  brain.yml.sample  core.yaml.sample  loki-config.yaml  observability-troubleshooting.md  op-registry.json.sample  op-registry.local.sample.yml  prometheus-rules.yml  prometheus.yml  promtail-config.yaml  resources.yaml.sample  secrets.yaml.sample  secrets.yml.sample  skill-registry.json  skill-registry.json.sample  skill-registry.local.sample.yml  utcp.yaml.sample
deprecated/: .env.sample  Dockerfile  bounce.sh  nuke-and-pave.sh
deprecated/alembic/: env.py
deprecated/config/: brain.yml.sample  capabilities.json.sample  otel-collector-config.yaml  prometheus.yml  secrets.yml.sample  skill-registry.json
deprecated/docs/: attention-routing-for-skills.md  letta.md  observability.md  policy-core.md  policy-runtime.md  policy-workflows.md  predicate-evaluation-contract.md  schedule-management-api-contract.md  skill-discovery.md  skills-glossary.md
deprecated/scripts/: policy_doc_gen.py  policy_simulate.py
deprecated/src/: access_control.py  agent_init.py  entrypoints.py  indexer.py  letta_bootstrap.py  prompts.py  time_utils.py
deprecated/test/: __init__.py  integration.sh  lint.sh
docs/: TODO.md  architecture-doctrine.md  boundaries-and-responsibilities.md  brain_architecture_report.md  capabilities.md  component-design.md  components.md  configuration.md  conventions.md  core-startup-sequence.md  database.md  development-guide.md  development.md  documentation-conventions.md  execution-invocation-contract.md  glossary.md  glossary.yaml  letta.md  manifesto.md  mcp_servers.md  operator-runbook-skills.md  phase-1.md  prd-apple-mcp-reminders-list-management.md  prd-firecrawl-mcp-web-scraping.md  prd-issues-log-monitoring-github.md  prd-issues-self-modifying-agent-safe-autoupdate.md  prd-memory-governance-hygiene.md  prd-memory-promotion.md  prd-object-storage.md  prd-obsidian-rename-delete-agent-api.md  prd-openwebui-agent-shim.md  prd-policy-engine-autonomy-levels.md  prd-scheduled-timed-tasks.md  prd-sequential-thinking-mcp-server.md  prd-signal-replies-and-reactions.md  prd-tactiq-meeting-ingestion.md  prd-triangle-attention-router-interruption-policy.md  prd-triangle-commitment-tracking-loop-closure.md  prd-triangle-skill-framework-capability-registry.md  prd-triangle-skill-framework-v2-logic-pipeline-ops.md  (+26 more)
docs/adr/: 0001-commitment-source-taxonomy.md
docs/done/: prd-policy-engine-autonomy-levels.md  prd-provenance-system.md  prd-triangle-attention-router-interruption-policy.md  prd-triangle-skill-framework-capability-registry.md
docs/meta/: component-readme-guide.md  documentation-conventions.md
docs/prd/: prd-firecrawl-mcp-web-scraping.md  prd-object-storage.md  prd-openwebui-agent-shim.md  prd-provenance-system.md  prd-scheduled-timed-tasks.md  prd-tactiq-meeting-ingestion.md  prd-triangle-commitment-tracking-loop-closure.md  prd-unified-observability-introspection.md  prd-universal-ingestion-pipeline.md
host-mcp-gateway/: .golangci.yml  README.md  SPEC.md  go.mod  host-mcp-gateway.json.sample  main.go  main_test.go
host-mcp-gateway/config/: host-mcp-gateway.sample.json
host-mcp-gateway/launchd/: brain.host-mcp-gateway.plist.sample
img/: diagrams.drawio  export-diagrams.sh
prompts/system/: assistant.txt  summary.txt
prompts/user/: recent_context.txt
resources/: __init__.py
resources/adapters/: __init__.py
resources/substrates/: __init__.py
scripts/: check_documentation_conventions.py  generate_glossary_docs.py  generate_service_api_docs.py  policy_conflicts.py  validate_skill_registry.py
src/: access_control.py  agent.py  agent_init.py  config.py  indexer.py  letta_bootstrap.py  llm.py  models.py  observability.py  observability_litellm.py  self_diagnostic_utils.py
src/attention/: __init__.py  assessment_engine.py  audit.py  batch_summarizer.py  channel_selection.py  decision_records.py  envelope_rendering.py  envelope_schema.py  escalation.py  fail_closed.py  fail_closed_storage.py  holding.py  policy_defaults.py  policy_engine.py  policy_schema.py  preference_application.py  preferences.py  (+5 more)
test/: check_attention_router_gate.sh  conftest.py  contract.sh  go.sh  integration.sh  lint.sh  smoke.sh  unit.sh
tests/: conftest.py
work-jobs/: index.md  scheduling-domain-model.md
(+801 files in other folders)
