[tool.poetry]
name = "brain"
version = "0.1.0"
description = "Privacy-first personal AI assistant"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pydantic = "^2.5.0"
pydantic-ai = ">=0.0.14"
litellm = "^1.50.0"
qdrant-client = "^1.11.0"
anthropic = ">=0.39.0"
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
pydantic-settings = "^2.5.0"
instructor = "^1.6.0"
code-mode = "^0.0.3"
utcp-mcp = "^1.1.2"
letta-client = "*"
# Observability
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-exporter-otlp = "^1.22.0"
opentelemetry-instrumentation-httpx = "^0.43b0"
opentelemetry-instrumentation-sqlalchemy = "^0.43b0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.7.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
