[tool.poetry]
name = "brain"
version = "0.1.0"
description = "Privacy-first personal AI assistant"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pydantic = "*"
pydantic-ai = "*"
litellm = "*"
qdrant-client = "*"
anthropic = "*"
redis = "*"
sqlalchemy = "*"
alembic = "*"
psycopg2-binary = "*"
asyncpg = "*"
httpx = "*"
pydantic-settings = "*"
instructor = "*"
code-mode = "*"
utcp-mcp = "*"
letta-client = "*"
pyyaml = "*"
# Observability
opentelemetry-api = "*"
opentelemetry-sdk = "*"
opentelemetry-exporter-otlp = "*"
opentelemetry-instrumentation-httpx = "*"
opentelemetry-instrumentation-sqlalchemy = "*"
python-json-logger = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
respx = "*"
black = "*"
ruff = "*"
mypy = "*"
pyright = "*"
greenlet = "^3.3.0"
types-PyYAML = "*"
pytest-cov = "*"

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
addopts = "-ra"
filterwarnings = [
  "ignore:pkg_resources is deprecated as an API.*:UserWarning",
  "ignore:Type google\\._upb\\._message\\..*:DeprecationWarning",
]
markers = [
  "integration: marks integration tests that may rely on external services",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
allow_redefinition = true
strict_optional = false
explicit_package_bases = true
mypy_path = "src"
disable_error_code = [
  "attr-defined",
  "union-attr",
  "arg-type",
  "list-item",
  "call-arg",
  "var-annotated",
  "no-redef",
  "assignment",
  "valid-type",
  "misc",
  "return-value",
  "call-overload",
]

[[tool.mypy.overrides]]
module = ["utcp_code_mode"]
ignore_missing_imports = true

[tool.pyright]
include = ["src", "test", "scripts", "alembic"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportMissingTypeArgument = false
reportArgumentType = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportGeneralTypeIssues = false
reportOptionalMemberAccess = false
reportReturnType = false
reportAssignmentType = false
